--- a/TipCalculator/Base.lproj/Main.storyboard
+++ b/TipCalculator/Base.lproj/Main.storyboard
@@ -1,24 +1,139 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="y4s-fz-uVn">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Tip Calculator-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o1Z-Wk-VBB" customClass="SkyFloatingLabelTextFieldWithIcon" customModule="SkyFloatingLabelTextField">
+                                <rect key="frame" x="20" y="161" width="374" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="Peb-3a-JKD"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iconTypeValue">
+                                        <integer key="value" value="0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wvY-uo-jCF">
+                                <rect key="frame" x="0.0" y="368" width="414" height="494"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="94" id="vfq-5B-ju8" customClass="cellPercentage">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="94"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vfq-5B-ju8" id="41t-ya-1ko">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="94"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueGradient" translatesAutoresizingMaskIntoConstraints="NO" id="eRu-LS-HVd">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="94"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="4984" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KKm-SF-E4p">
+                                                    <rect key="frame" x="206" y="21" width="188" height="62"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="40"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="eRu-LS-HVd" firstAttribute="top" secondItem="41t-ya-1ko" secondAttribute="top" id="6TF-Jm-QFZ"/>
+                                                <constraint firstItem="eRu-LS-HVd" firstAttribute="leading" secondItem="41t-ya-1ko" secondAttribute="leading" id="guW-Z2-4ke"/>
+                                                <constraint firstAttribute="trailing" secondItem="eRu-LS-HVd" secondAttribute="trailing" id="kdq-Gr-w8I"/>
+                                                <constraint firstAttribute="bottom" secondItem="eRu-LS-HVd" secondAttribute="bottom" id="pQq-kS-IvK"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="percentageText" destination="KKm-SF-E4p" id="7Ib-gh-iHq"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="T1W-fO-QFC"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="f75-aq-EjI"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jz4-hF-9Td">
+                                <rect key="frame" x="106" y="268" width="288" height="92"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="92" id="tth-hv-Uas"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="wvY-uo-jCF" firstAttribute="top" secondItem="jz4-hF-9Td" secondAttribute="bottom" constant="8" symbolic="YES" id="8vC-uz-bSM"/>
+                            <constraint firstItem="wvY-uo-jCF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GI0-Lo-DJX"/>
+                            <constraint firstItem="o1Z-Wk-VBB" firstAttribute="trailing" secondItem="jz4-hF-9Td" secondAttribute="trailing" id="IiI-ur-tTo"/>
+                            <constraint firstItem="o1Z-Wk-VBB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Kzo-vo-K6E"/>
+                            <constraint firstItem="jz4-hF-9Td" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="106" id="M3f-JV-Wwj"/>
+                            <constraint firstItem="wvY-uo-jCF" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="X3k-CU-gd0"/>
+                            <constraint firstItem="o1Z-Wk-VBB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="21" id="XQN-vP-irY"/>
+                            <constraint firstItem="o1Z-Wk-VBB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="a2X-bY-TiU"/>
+                            <constraint firstItem="jz4-hF-9Td" firstAttribute="top" secondItem="o1Z-Wk-VBB" secondAttribute="bottom" constant="32" id="syf-4E-fcD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="o1Z-Wk-VBB" secondAttribute="trailing" constant="20" id="vGM-1d-d1d"/>
+                            <constraint firstItem="o1Z-Wk-VBB" firstAttribute="centerX" secondItem="wvY-uo-jCF" secondAttribute="centerX" id="z3x-lc-035"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Etm-KO-Y2E" appends="YES" id="FP0-1X-hcI"/>
+                        </connections>
                     </view>
+                    <navigationItem key="navigationItem" title="Tip Calculator" id="pxy-ym-m2z">
+                        <barButtonItem key="rightBarButtonItem" title="Calculate" id="8CX-bw-ExZ"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="billAmount" destination="o1Z-Wk-VBB" id="Lh8-ag-KtR"/>
+                        <outlet property="tipLabel" destination="jz4-hF-9Td" id="1zb-R3-Ets"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Etm-KO-Y2E"/>
             </objects>
+            <point key="canvasLocation" x="1298.5507246376812" y="-549.10714285714278"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Vh7-CB-T4n">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="y4s-fz-uVn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="EMC-Qf-3HD">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="DEl-hc-e2t"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vgI-JV-eNp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="257.97101449275362" y="-540.40178571428567"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="blueGradient" width="2400" height="2000"/>
+    </resources>
 </document>
